--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider --inspect'next build",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider; next build",
     "serve": "next start",
     "export": "next export",
     "postbuild": "next-sitemap"
